--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="nav">
         <button id="btn">Hide Nav</button>
         <ul class="show">
-            <li><a href="https://github.com/kiahDev">Github</a></li>
-            <li><a href="https://instagram.com/zekiaaa">Instagram</a></li>
-            <li><a href="https://facebook.com/hezekiah.novales">Facebook</a></li>
+            <li><a href="https://github.com/kiahDev" target="_blank">Github</a></li>
+            <li><a href="https://instagram.com/zekiaaa" target="_blank">Instagram</a></li>
+            <li><a href="https://facebook.com/hezekiah.novales" target="_blank">Facebook</a></li>
         </ul>
     </nav>
 
